--- a/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre-1-3.html
@@ -28,10 +28,11 @@
         民币壹仟壹佰万元整，担保期限为：______年___月___日至______年___月___日。甲、乙、丙
         三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
 {% elif counter_warrant_typ == 31 %}
-    <p>经丙方要求，乙方同意以其合法持有的票据金额为不低于480.39万元（人民币大写金额：肆佰捌
-        拾万叁仟玖佰元整）的电子商业承兑汇票以背书“质押”方式出质给被背书人甲方为保证合同
-        项下甲方给丙方担保的全部款项向甲方提供质押反担保, 乙方向甲方提供的质押反担保的被担
-        保主债权金额为伍佰万元整，担保期限为：______年___月___日至______年___月___日。甲、乙、丙
+    <p>经丙方要求，乙方同意以其合法持有的票面总额不低于<strong><u>{{ denomination_str }}万元</u></strong>（人民币大
+        写金额：<strong><u>{{ denomination_cn }}</u></strong>）的{{ counter_draft_obj.get_typ_display }}以背
+        书“质押”方式出质给被背书人甲方为保证合同项下甲方给丙方担保的全部款项向甲方提供质押反担保, 乙方向甲方
+        提供的质押反担保的被担保主债权金额为<strong><u>{{ agree_amount_cn }}</u></strong>，担保期
+        限为：______年___月___日至______年___月___日。甲、乙、丙
         三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
 {% else %}
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
