--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-s-g.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-s-g.html
@@ -1,6 +1,6 @@
 <div class="contain">
     <div class="split">
-        <p style="text-align: center; font-size: 21pt; margin-bottom: 21pt;"><strong>{{ counter_obj.get_counter_name_display }}</strong></p>
+        <div style="text-align: center; font-size: 21pt; margin-bottom: 21pt;"><strong>{{ counter_obj.get_counter_name_display }}</strong></div>
         <p style="text-indent: 0pt">致：成都武侯中小企业融资担保有限责任公司</p>
         <div>{% include 'dbms/agree/agree_board/counter/g/single/g-0-s-pre.html' %}</div>
         <p>一、{% include 'dbms/agree/agree_board/counter/g/g-1.html' %}</p>
