--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-s-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-s-z.html
@@ -42,7 +42,7 @@
     <div class="split">
         {% if counter_warrant_typ == 11 %}
             {% include 'dbms/agree/agree_board/counter/z/z-appendix-receive.html' %}
-        {% elif counter_warrant_typ == 21%}
+        {% elif counter_warrant_typ == 21 %}
             {% include 'dbms/agree/agree_board/counter/d/d-appendix-1.html' %}
         {% elif counter_warrant_typ == 31 %}
             {% include 'dbms/agree/agree_board/counter/z/d-appendix-draft.html' %}
@@ -56,6 +56,9 @@
     {% if counter_warrant_typ == 11 %}
         <div class="split">
             {% include 'dbms/agree/agree_board/counter/z/z-registration-receive.html' %}
+        </div>
+        <div class="split">
+            <p style="padding-top: 100pt">（此页空白）</p>
         </div>
     {% endif %}
 
