--- a/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-receive.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-receive.html
@@ -1,7 +1,7 @@
 <div class="receive-tab">
     <p>（<u>{{ counter_obj.counter_num }}</u>《{{ counter_obj.get_counter_name_display }}》附件一）</p>
-    <p align="center"><strong>质押登记表</strong></p>
-    <p align="center">（全部质押用）</p>
+    <div align="center"><strong>质押登记表</strong></div>
+    <div align="center">（全部质押用）</div>
     {#WARRANT_TYP_LIST = [#}
     {#        (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
     {#        (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
