--- a/A_dbms/templates/dbms/agree/agree_board/entrust-single.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-single.html
@@ -6,7 +6,7 @@
     <div>{% include 'dbms/agree/agree_board/entrust/single/0-pre-0.html' %}</div>
     <p><strong>一、保证的范围与期限</strong></p>
     <div>{% include 'dbms/agree/agree_board/entrust/single/1-scope-term-1.html' %}</div>
-    <p><strong>二、保证金、担保费及其他费用</strong> </p>
+    <p><strong>二、保证金、担保费及其他费用</strong></p>
     <div>{% include 'dbms/agree/agree_board/entrust/single/2-charge-1.html' %}</div>
     <p><strong>三、甲方的权利、义务</strong></p>
     <div>{% include 'dbms/agree/agree_board/entrust/single/3-rights-obligations-j-1.html' %}</div>
@@ -27,13 +27,20 @@
     <p><strong>十一、合同的生效</strong></p>
     <div>{% include 'dbms/agree/agree_board/entrust/single/11-operation-1.html' %}</div>
     <p><strong>十二、通知送达条款</strong></p>
-        {% include 'dbms/agree/agree_board/entrust/service-clause.html' %}
+    {% include 'dbms/agree/agree_board/entrust/service-clause.html' %}
     <p><strong>十三、其他</strong></p>
     {% include 'dbms/agree/agree_board/entrust/other.html' %}
 </div>
 
 <div class="split">
     {% include 'dbms/agree/agree_board/entrust/signature-page.html' %}
+</div>
+
+<div class="split">
+    <p style="padding-top: 100pt">（此页空白）</p>
+</div>
+<div class="split">
+    <p style="padding-top: 100pt">（此页空白）</p>
 </div>
 
 
