--- a/A_dbms/templates/dbms/agree/agree_board/entrust/home-page.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/home-page.html
@@ -1,8 +1,8 @@
-<p align="right">合同编号：<u>{{ agree_obj.agree_num }}</u></p>
-<p class="agree-title str-p"><strong>{{ agree_obj.get_agree_name_display }}</strong></p>
+<div align="right">合同编号：<u>{{ agree_obj.agree_num }}</u></div>
+<div class="agree-title" style="text-align: center"><strong>{{ agree_obj.get_agree_name_display }}</strong></div>
 <div class="page-home">
     <div class="page-home-j">
-        <p class="str str-p page-home-p">担保人（甲方）：成都武侯中小企业融资担保有限责任公司</p>
+        <p class="page-home-p">担保人（甲方）：成都武侯中小企业融资担保有限责任公司</p>
         <p class="page-home-p">住所（地址）：成都市武侯区武青南路33号(武侯新城管委会内)</p>
         <p class="page-home-p">法定代表人：何长见</p>
     </div>
