--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/0-pre.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/0-pre.html
@@ -1,4 +1,4 @@
-<p>根据乙方申请，甲方决定为乙方在<span class="str-p"><strong><u>{{ agree_obj.branch.name }}</u></strong></span>的一系列债务
+<p>根据乙方申请，甲方决定为乙方在<strong><u>{{ agree_obj.branch.name }}</u></strong>的一系列债务
     （包括借款或承兑汇票、保函等）提供连带责任保证担保。为明确各自的权利、义务，甲乙双方遵照有关
     法律规定，经协商一致，订立本合同，以便共同遵守执行。
 </p>
