--- a/A_dbms/templates/dbms/agree/agree_board/entrust/service-clause.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/service-clause.html
@@ -8,9 +8,9 @@
 <p>邮政编码：610041</p>
 <p>收件人：成都武侯中小企业融资担保有限责任公司</p>
 <p>如至乙方：</p>
-<p>地址：<span class="str-p"><strong><u>{{ agree_obj.lending.summary.custom.contact_addr }}</u></strong></span></p>
-<p>电话：<span class="str-p"><strong><u>{{ agree_obj.lending.summary.custom.contact_num }}</u></strong></span></p>
-<p>收件人：<span class="str-p"><strong><u>{{ agree_obj.lending.summary.custom.linkman }}</u></strong></span></p>
+<p>地址：<strong><u>{{ agree_obj.lending.summary.custom.contact_addr }}</u></strong></p>
+<p>电话：<strong><u>{{ agree_obj.lending.summary.custom.contact_num }}</u></strong></p>
+<p>收件人：<strong><u>{{ agree_obj.lending.summary.custom.linkman }}</u></strong></p>
 <p>（二）甲乙双方确认上述送达地址适用范围包括非诉时各类通知、协议等文件以及就合同发生纠纷时相关文
     件和法律文书的送达，同时包括在争议进入仲裁、民事诉讼程序后的一审、二审、再审和执行程序。</p>
 <p>（三）双方的送达地址需要变更时应向对方履行书面的通知义务；仲裁及民事诉讼阶段当事人地址变更时应
