--- a/A_dbms/templates/dbms/agree/agree_board/entrust/single/7-liability-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/single/7-liability-1.html
@@ -21,7 +21,7 @@
 <p>4、要求乙方在甲方规定的期限内提前偿还全部借款本息，同时有权要求贷款银行停止发放尚未划付的贷款、
     提前收回已发放的贷款本息。</p>
 <p>5、甲方代乙方履行付款责任后，要求乙方立即归还下列款项：</p>
-<p><strong>(1) 甲方向银行代偿的金额和自代偿之日起的利息（按银行同期贷款基准利率 4 倍计息）；</strong></p>
+<p><strong>(1) 甲方向银行代偿的金额和自代偿之日起的利息（按银行同期贷款基准利率<u>4</u>倍计息）；</strong></p>
 <p><strong>(2) 甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、
     鉴定费、翻译费、评估拍卖费等）。</strong></p>
 <p> 6、对乙方或其他方提供的反担保财产申请法院依法强制执行，所得款项及权益优先清偿贷款本息。
