--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
@@ -182,7 +182,8 @@
                         $('#e_stock_typ').text(arg.forme.stock_typ);
 
                         $('#e_draft_owner').text(arg.forme.draft_owner);
-                        $('#e_draft_typ').text(arg.forme.draft_typ);
+                        $('#e_typ').text(arg.forme.typ);
+                        $('#e_denomination').text(arg.forme.denomination);
                         $('#e_draft_detaile').text(arg.forme.draft_detaile);
 
                         $('#e_vehicle_owner').text(arg.forme.vehicle_owner);
