--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-edit.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-edit.html
@@ -110,7 +110,8 @@
                         $('#e_share').text(arg.forme.share);
                         $('#e_stock_typ').text(arg.forme.stock_typ);
 
-                        $('#e_draft_typ').text(arg.forme.draft_typ);
+                        $('#e_typ').text(arg.forme.typ);
+                        $('#e_denomination').text(arg.forme.denomination);
                         $('#e_draft_detaile').text(arg.forme.draft_detaile);
 
                         $('#e_frame_num').text(arg.forme.frame_num);
