--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry-draft.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry-draft.html
@@ -5,6 +5,9 @@
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         所有权人：{{ warrant_obj.draft_warrant.draft_owner.short_name }}
     </label>
+     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        票面总额：{{ warrant_obj.draft_warrant.denomination }}
+    </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         详细信息：{{ warrant_obj.draft_warrant.draft_detail }}
     </label>
