--- a/A_dbms/static/dbms/css/agree-result-style.css
+++ b/A_dbms/static/dbms/css/agree-result-style.css
@@ -6,7 +6,7 @@ body {
 
 .contain {
     /*页面宽度*/
-    width: 188mm;
+    width: 210mm;
     /*左空白*/
     margin-left: auto;
     /*右空白*/
@@ -19,9 +19,8 @@ body {
     letter-spacing: 0pt;
     /*行间距*/
     line-height: 25pt;
-    /*背景图片*/
-    background-image: url("../images/agree_dark_line.png");
-    background-repeat: repeat-y;
+    /*background-image: url("../images/agree_dark_line.png");*/
+    /*background-repeat: repeat-y;*/
 }
 
 /*段前缩进*/
@@ -29,16 +28,17 @@ p {
     margin-top: 9pt;
     margin-bottom: 0pt;
     text-indent: 30pt;
-    /*两端对齐文本*/
-    text-align: justify;
-    text-justify: distribute;
-    text-align-last: left;
-    -moz-text-align-last: left; /* 针对 Firefox 的代码 */
 }
 
 /*换页打印*/
 .split {
     page-break-after: always;
+}
+
+/*收紧*/
+.frap {
+    /*字间距*/
+    letter-spacing: 0pt;
 }
 
 /*合同标题*/
@@ -49,7 +49,7 @@ p {
     padding-bottom: 25mm;
 }
 
-.page-home p{
+.page-home-p {
     /*{#padding-top: 0pt;#} */
     text-indent: 0pt;
 }
@@ -83,8 +83,8 @@ p {
     padding-top: 20pt;
 }
 
-.sign-page div {
-    padding-bottom: 75pt;
+.sign-page > div {
+    padding-bottom: 100pt;
 }
 
 .sign-page p {
@@ -138,12 +138,4 @@ tr td {
 
 .pro-tab tr td {
     border: 0px solid black;
-}
-
-.nt td {
-    border: 1px solid red;
-    text-align: justify;
-    text-justify: distribute-all-lines;
-    text-align-last: justify;
-    -moz-text-align-last: right;
 }
