--- a/A_dbms/templates/dbms/agree/agree_board/counter/_m/1-d-pawn-0.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_m/1-d-pawn-0.html
@@ -18,6 +18,5 @@
 {% endif %}
 （1、房屋所有权；2、土地使用权；3、设备；4、在建工程；5、车辆；6、其他）设定抵押（前述
 抵押物详见附件《抵押财产清单》，该抵押财产清单为本合同组成部
-分，与本合同具有同等法律效力）。各方认可抵押物价值为（大写）人民币
-<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。
+分，与本合同具有同等法律效力）。各方认可抵押物价值为（大写）人民币<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。
