--- a/A_dbms/templates/dbms/agree/agree_board/counter/g/g-appendix.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/g/g-appendix.html
@@ -1,4 +1,4 @@
-<p><strong>反担保人情况说明</strong></p>
+<div align="center"><strong>反担保人情况说明</strong></div>
 <p>被担保人：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
 <p>1、反担保人家庭情况</p>
 <table>
@@ -68,21 +68,7 @@
         <td style="width: 12.5%" align="center">是否抵押</td>
     </tr>
     <tr>
-        <td align="center" rowspan="6">房产</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
+        <td align="center" rowspan="4">房产</td>
         <td></td>
         <td></td>
         <td></td>
@@ -133,7 +119,7 @@
         <td></td>
     </tr>
     <tr>
-        <td align="center" rowspan="4">对外投<br>资公司</td>
+        <td align="center" rowspan="3">对外投<br>资公司</td>
         <td align="center" colspan="2">公司名称</td>
         <td align="center">关系</td>
         <td align="center">出资额<br>（万元）</td>
@@ -151,19 +137,11 @@
         <td></td>
         <td></td>
     </tr>
-    <tr>
-        <td colspan="2"></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
 </table>
 <p>注：以上表格不足可另行添加，反担保人财产包括但不限于上述列表。</p>
-<p>
-<div class="row">
-    <div class="col-lg-6 col-xs-6">填表人：</div>
-    <div class="col-lg-6 col-xs-6">&nbsp&nbsp&nbsp&nbsp&nbsp年
-        &nbsp&nbsp月&nbsp&nbsp日
-    </div>
-</div>
-</p>
+<table>
+    <tr style="height: 30pt">
+        <td style="border: none" width="50%">填表人：</td>
+        <td style="border: none">{% include 'dbms/agree/agree_board/date-period.html' %}</td>
+    </tr>
+</table>
