--- a/A_dbms/templates/dbms/agree/agree_board/counter/z/d-appendix-draft.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/z/d-appendix-draft.html
@@ -1,6 +1,5 @@
 <p><u>{{ counter_obj.counter_num }}</u>《{{ counter_obj.get_counter_name_display }}》项下</p>
-<p align="center"><strong>质押权利清单
-</strong></p>
+<div align="center"><strong>质押权利清单</strong></div>
 <p style="float: right">单位：元</p>
 {#WARRANT_TYP_LIST = [#}
 {#        (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
@@ -9,13 +8,8 @@
     {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-31.html' %}
 </table>
 <p>甲方将负责保管以上{{ counter_draft_obj.extend_draft.all.0.get_draft_typ_display }}，直至
-    丙方还清<strong><u>{{ agree_amount_cn }}</u></strong>贷款及相关利息（贷款期限：
-    {% if agree_term == 12 %}
-        壹年
-    {% else %}
-        {{ agree_term_str }}个月
-    {% endif %}
-    期）。</p>
+    丙方还清<strong><u>{{ agree_amount_cn }}</u></strong>贷款及相关利息（贷款
+    期限：<strong><u>{{ credit_term_cn }}期</u></strong>）。</p>
 <p>若发生甲方代偿情形，甲方将行使质权，收回款项将直接用于抵偿代偿款项本金、利息及其他相关费用。若
     质权行使中遭遇拒付等事项，甲方享有对乙方及其前手的追索权等所有票据权利。</p>
 <p>在此期间，丙方质押的上述{{ counter_draft_obj.extend_draft.all.0.get_draft_typ_display }}到期
