--- a/A_dbms/templates/dbms/agree/agree_board/counter/z/z-registration-receive.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/z/z-registration-receive.html
@@ -1,4 +1,4 @@
-<p align="center" style="padding-bottom: 30pt;font-size: 21pt"><strong>应收账款质押登记协议书</strong></p>
+<div align="center" style="padding-bottom: 30pt;font-size: 21pt"><strong>应收账款质押登记协议书</strong></div>
 <p>出质人：<strong><u>{{ counter_warrant_obj.receive_warrant.receive_owner.name }}</u></strong></p>
 <p>法定代表人：<strong><u>{{ counter_warrant_obj.receive_warrant.receive_owner.company_custome.representative }}</u></strong>
 </p>
@@ -14,7 +14,7 @@
 <br>
 <br>
 <br>
-<div style="">
+<div>
     <div style="padding-bottom: 51pt">
         <p>出质人（签章）：<strong><u>{{ counter_warrant_obj.receive_warrant.receive_owner.name }}</u></strong></p>
         <p>
@@ -22,7 +22,7 @@
         </p>
         {% include 'dbms/agree/agree_board/sign-date.html' %}
     </div>
-    <div style="">
+    <div>
         <p>质权人（签章）：成都武侯中小企业融资担保有限责任公司</p>
         <p>法定代表人：何长见</p>
         {% include 'dbms/agree/agree_board/sign-date.html' %}
