--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/18-dispute-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/18-dispute-1.html
@@ -1,2 +1,2 @@
 因本协议发生的争议，经协商不能达成一致意见，应向本合同签订地人民法院提起诉讼，本合同签订地
-为<span class="str-p"><strong><u>成都市武侯区</u></strong></span>。
+为<strong><u>成都市武侯区</u></strong>。
