--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
@@ -7,10 +7,15 @@
 <p>3）担保品种为保函时：
     A、按次收取：每次按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>%收取；
     B、按担保时间收取：每月按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>% 收取。
-    C、按年收取：每年按担保敞口总额的<u>&&nbsp&nbsp&nbsp</u>%收取；</p>
-<p>4）按以下约定执行：按担保本金总额的<u>&nbsp&nbsp&nbsp</u>%/年收取[含税]，
-    不足一年的，按一年收取。</p>
-<p>（二）具体数额：按以下第<span class="str-p"><strong><u>2）</u></strong></span>项执行：</p>
+    C、按年收取：每年按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>%收取；</p>
+{% if rate_b %}
+    <p>4）按以下约定执行：按担保本金总额的<u>{{ single_quota_rate }}</u>%/年收取[含税]，
+        不足一年的，按一年收取。</p>
+{% else %}
+    <p>4）<u>{{ single_quota_rate }}</u></p>
+{% endif %}
+
+<p>（二）具体数额：按以下第<strong><u>2）</u></strong>项执行：</p>
 <p>1）一次收取担保综合费金额为：人民币 ；</p>
 <p>2）按签订《同意放款确认书》或《保证合同》、《保函》时确认的担保额度以本合同确定的担
     保综合费率计算收取；</p>
@@ -20,7 +25,7 @@
     第四年<u>&nbsp&nbsp&nbsp</u>万元；
     第五年<u>&nbsp&nbsp&nbsp</u>万元；</p>
 <p>4）<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
-<p>（三）收取时间：按以下第<span class="str-p"><strong><u>2）</u></strong></span>项执行：</p>
+<p>（三）收取时间：按以下第<strong><u>2）</u></strong>项执行：</p>
 <p>1）乙方于甲方与债权银行或受益人签订《保证合同》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
 <p>2）乙方于甲方每次向债权方出具《同意放款确认书》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
 <p>3）于担保期内每年的 月 日前支付当年的担保综合费；</p>
