--- a/A_dbms/templates/dbms/agree/agree_board/entrust/other.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/other.html
@@ -2,13 +2,13 @@
     构成本合同不可分割的一部分，与本合同具有同等的法律效力。</p>
 <p>（二）本合同独立于其他关联合同，其他关联合同的无效并不导致本合同无效。如本合同的某条款或某条款的
     部分内容被认定无效，该无效条款或该无效部分并不影响本合同及本合同其他条款或该条款其他内容的有效性。</p>
-<p>（三）本合同正本一式<span class="str-p"><strong><u>{{ agree_copy_cn }}</u></strong></span>份，
-    甲方执<span class="str-p"><strong><u>壹</u></strong></span>份，
-    乙方执<span class="str-p"><strong><u>壹</u></strong></span>份，
-    登记机关<span class="str-p"><strong><u>{{ agree_copy_jy_cn }}</u></strong></span>份。
+<p>（三）本合同正本一式<strong><u>{{ agree_copy_cn }}</u></strong>份，
+    甲方执<strong><u>壹</u></strong>份，
+    乙方执<strong><u>壹</u></strong>份，
+    登记机关<strong><u>{{ agree_copy_jy_cn }}</u></strong>份。
     具有同等的法律效力。</p>
-<p class="str-p"><strong>声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。
+<p><strong>声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。
     乙方对本合同条款
     的含义及相应的法律后果已全部通晓并充分理解。</strong></p>
-<p class="str-p"><strong>乙方确认：</strong></p>
-<p class="str-p"><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+<p><strong>乙方确认：</strong></p>
+<p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
