--- a/A_dbms/templates/dbms/agree/preview-result.html
+++ b/A_dbms/templates/dbms/agree/preview-result.html
@@ -2,9 +2,8 @@
 {% load static %}
 {% block title %}{{ agree_obj.agree_num }}{% endblock %}
 {% block extra-css %}
-{#    {% include 'dbms/agree/agree_board/style.html' %}#}
-    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-style.css' %}">
-    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-style.css' %}">
+    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-result-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-result-style.css' %}">
 {% endblock %}
 {% block body %}
     <div class="contain">
