--- a/A_dbms/templates/dbms/article/scan/article-summry-body.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry-body.html
@@ -10,4 +10,4 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">风控专员：{{ article_obj.control.name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">担保期限：{{ article_obj.credit_term }}个月</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">签批日期：{{ article_obj.sign_date }}</label>
-<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">目状态：{{ article_obj.get_article_state_display }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目状态：{{ article_obj.get_article_state_display }}</label>
