--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-other.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-other.html
@@ -25,7 +25,8 @@
                         <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
                             {{ forloop.counter }}</a></td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
-                        <td>{{ warrant.other_warrant.other_owner.short_name }}</td>
+                        <td><a target="_blank" href="{% url 'dbms:custom_scan' custom_id=warrant.other_warrant.other_owner.id %}">
+                            {{ warrant.other_warrant.other_owner.short_name }}</a></td>
                         <td>{{ warrant.other_warrant.get_other_typ_display }}</td>
                         <td>{{ warrant.other_warrant.other_detail }}</td>
                         {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
