--- a/A_dbms/templates/dbms/warrant/modl/mod_form/draft-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/draft-edit.html
@@ -1,5 +1,19 @@
 <div id="form_draft_eidt" class="warrant-extend" style="display: none">
 
+    <div class="form-group"><!--票据总额-->
+        <label for="id_denomination"
+               class="col-sm-3 control-label">{{ form_draft_eidt.denomination.label }}：</label>
+        <div class="col-sm-9">{{ form_draft_eidt.denomination }}</div>
+        <label id="e_denomination" class="pull-right">{{ form_draft_eidt.denomination.errors }}</label>
+    </div>
+
+    <div class="form-group"><!--票据总额-->
+        <label for="id_typ"
+               class="col-sm-3 control-label">{{ form_draft_eidt.typ.label }}：</label>
+        <div class="col-sm-9">{{ form_draft_eidt.typ }}</div>
+        <label id="e_typ" class="pull-right">{{ form_draft_eidt.typ.errors }}</label>
+    </div>
+
     <div class="form-group"><!--票据描述-->
         <label for="id_draft_detail"
                class="col-sm-3 control-label">{{ form_draft_eidt.draft_detail.label }}：</label>
