--- a/A_dbms/templates/dbms/appraisal/appraisal-scan.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-scan.html
@@ -14,6 +14,8 @@
         {% include 'dbms/appraisal/modl/lending-del-mod.html' %}
         {% include 'dbms/appraisal/modl/article-sign-mod.html' %}
         {% include 'dbms/appraisal/modl/article-change-mod.html' %}
+        {% include 'dbms/review/modl/investigate-add-mod.html' %}
+        {% include 'dbms/review/modl/investigate-del-mod.html' %}
     </div>
 {% endblock %}
 {% block extra-js %}
@@ -27,4 +29,6 @@
     {% include 'dbms/appraisal/extra/js-lending-del.html' %}
     {% include 'dbms/appraisal/extra/js-article-sign.html' %}
     {% include 'dbms/appraisal/extra/js-article-change.html' %}
+    {% include 'dbms/review/extra/js-investigate-add.html' %}
+    {% include 'dbms/review/extra/js-investigate-del.html' %}
 {% endblock %}
