--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
@@ -12,11 +12,13 @@
                 <a class="btn btn-primary btn-sm " id="lendingOrder">放款次序</a><!--#path('appraisal/lending/add/'-->
                 <a class="btn btn-primary btn-sm " id="articleSignB">项目签批</a><!--#path('appraisal/sign/'-->
                 <a class="btn btn-primary btn-sm " id="articleChangeB">项目变更</a><!--#path('appraisal/sign/'-->
+                <a class="btn btn-primary btn-sm " id="investigateB">补充调查</a><!--#path('custom/del/'-->
             {% else %}
                 <a class="btn btn-primary btn-sm " id="guaranteeB">反担保</a><!--#path('appraisal/guarantee/add/'-->
                 <a class="btn btn-primary btn-sm " id="changeLendingOrderB">变更</a>
                 <!--#path('appraisal/guarantee/add/'-->
             {% endif %}
+
         </label>
     </div>
 
