--- a/A_dbms/templates/dbms/appraisal/scan/tab/lending_order.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/lending_order.html
@@ -5,6 +5,7 @@
             <th>发放次序</th>
             <th>拟放金额（元）</th>
             <th>已放金额（元）</th>
+            <th>备注</th>
             {% if PAGE_TITLE == '项目评审' %}
                 <th>操作</th>
             {% endif %}
@@ -37,9 +38,10 @@
                 {% endif %}
                 <td>{{ lending.order_amount }}</td>
                 <td>{{ lending.lending_provide_sum }}</td>
+                <td>{{ lending.remark|default_if_none:"" }}</td>
                 {% if PAGE_TITLE == '项目评审' %}
                     <td>
-                        <a class="btn btn-primary btn-xs editLendingOrderB">修改</a>
+{#                        <a class="btn btn-primary btn-xs editLendingOrderB">修改</a>#}
                         <a class="btn btn-primary btn-xs delLendingOrderB">删除</a>
                     </td>
                 {% endif %}
