--- a/A_dbms/templates/dbms/review/extra/js-review-auto-add.html
+++ b/A_dbms/templates/dbms/review/extra/js-review-auto-add.html
@@ -41,6 +41,7 @@
                         alert(dict.message);
                         $('#e_analysis').text(dict.forme.analysis);
                         $('#e_suggestion').text(dict.forme.suggestion);
+                        $('#e_review_date').text(dict.forme.review_date);
                     }
                 }
             })
