--- a/A_dbms/templates/dbms/custom/scan/custom-summry-c.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-c.html
@@ -1,6 +1,6 @@
 <div class="panel-body row">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        客户名称：{{ custom_obj.name }}
+        客户名称：{{ custom_obj.short_name }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         所属行业：{{ custom_obj.company_custome.idustry }}
