--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -11,7 +11,7 @@
             <li role="presentation">
                 <a href="#shareholder" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">股东信息</a></li>
-             <li role="presentation">
+            <li role="presentation">
                 <a href="#trustee" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">董事信息</a></li>
         {% elif custom_obj.genre == 2 %}
@@ -25,6 +25,9 @@
         <li role="presentation" class="active">
             <a href="#review_check" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">保后</a></li>
+        <li role="presentation">
+            <a href="#investigate" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab">补调</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
@@ -45,5 +48,7 @@
             {% include 'dbms/custom/scan/tab/project_status.html' %}</div>
         <div role="tabpanel" class="tab-pane active" id="review_check"> <!--保后-->
             {% include 'dbms/review/scan/tab/review-check.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="investigate"> <!--补调-->
+            {% include 'dbms/review/scan/tab/investigate.html' %}</div>
     </div>
 </div>
