--- a/A_dbms/templates/dbms/review/modl/mod_form/review-add.html
+++ b/A_dbms/templates/dbms/review/modl/mod_form/review-add.html
@@ -23,4 +23,11 @@
         <div class="col-sm-9">{{ form_review_add.classification }}</div>
         <label id="e_classification" class="pull-right">{{ form_review_add.classification.errors }}</label>
     </div>
+    <div class="form-group"><!--保后日期-->
+        <label for="id_review_date"
+               class="col-sm-3 control-label">{{ form_review_add.review_date.label }}：</label>
+        <div class="col-sm-9">{{ form_review_add.review_date }}</div>
+        <label id="e_review_date" class="pull-right">{{ form_review_add.review_date.errors }}</label>
+    </div>
+
 </div>
