--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -9,6 +9,8 @@
         {% include 'dbms/review/modl/review-plan-mod.html' %}
         {% include 'dbms/review/modl/review-add-mod.html' %}
         {% include 'dbms/review/modl/review-del-mod.html' %}
+        {% include 'dbms/review/modl/investigate-add-mod.html' %}
+        {% include 'dbms/review/modl/investigate-del-mod.html' %}
     </div>
 {% endblock %}
 
@@ -17,4 +19,6 @@
     {% include 'dbms/review/extra/js-review-add.html' %}
     {% include 'dbms/review/extra/js-review-auto-add.html' %}
     {% include 'dbms/review/extra/js-review-del.html' %}
+    {% include 'dbms/review/extra/js-investigate-add.html' %}
+    {% include 'dbms/review/extra/js-investigate-del.html' %}
 {% endblock %}
